test: add currency formatter test

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,14 @@ version=unspecified
 
 # Project Configuration
 org.gradle.jvmargs=-Xmx1536m
+org.gradle.warning.mode=summary
 android.useAndroidX=true
 android.enableJetifier=true
 kotlin.code.style=official
 
-# Show all warnings
---warning-mode=(all)
+# Test Configuration
+failFast=false
+ignoreFailures=true
 
 
 
