--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,12 +1,11 @@
 name: Unit Test
 
-on: 
-  push:
-    branches: 
-      - master
-  pull_request:
-    branches:
-      - master
+on: push:
+      branches: 
+        - master
+      pull_request:
+        branches:
+          - master
 
 jobs:
   build:
