--- a/examples/teams/src/main/AndroidManifest.xml
+++ b/examples/teams/src/main/AndroidManifest.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.gocantar.cassidy.app">
-
+    package="com.gocantar.cassidy.examples.teams">
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="donut">
-        <activity android:name="com.gocantar.cassidy.example.MainActivity">
+        <activity android:name=".TeamsActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:host="cassidy.com"
+                    android:path="/examples/teams"
+                    android:scheme="app" />
             </intent-filter>
         </activity>
     </application>
